concord_macros/tests/v5/dsl/fail/fail_old_response_custom.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client OldResponseCustomApi {
        base https "example.com"
        response custom MyObserver
    }
}

fn main() {}
