concord_macros/tests/v5/dsl/fail/fail_old_response_custom.stderr
error: `response custom` was removed in v5; use `observe rate_limit MyObserver`
 --> tests/v5/dsl/fail/fail_old_response_custom.rs:7:9
  |
7 |         response custom MyObserver
  |         ^^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_old_response_custom.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
